{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 15,
  "lineage": "930689ea-76be-4131-27b0-1465ead8c7d8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:921108067704:security-group/sg-007116932662f2c4b",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-007116932662f2c4b",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-08bffd360b72f38d5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:921108067704:vpc/vpc-08bffd360b72f38d5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05bc8b661422ae6b1",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-00f365b9738096f92",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08bffd360b72f38d5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0803326a50b28cfa7",
            "owner_id": "921108067704",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_alb-sonia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:loadbalancer/app/nginx-alb-sonia/34a47fae58af5aaf",
            "arn_suffix": "app/nginx-alb-sonia/34a47fae58af5aaf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-alb-sonia-1737051525.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:loadbalancer/app/nginx-alb-sonia/34a47fae58af5aaf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-alb-sonia",
            "preserve_host_header": false,
            "security_groups": [
              "sg-007116932662f2c4b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0985fe4b72ba472fa"
              },
              {
                "subnet_id": "subnet-0c949e11f7a62bb70"
              }
            ],
            "subnets": [
              "subnet-0985fe4b72ba472fa",
              "subnet-0c949e11f7a62bb70"
            ],
            "vpc_id": "vpc-08bffd360b72f38d5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "data.aws_security_group.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_listener-sonia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:listener/app/nginx-alb-sonia/34a47fae58af5aaf/fbb8a713653a5475",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:targetgroup/nginx-alb-dev-sonia-tg/f01c021f12a2e548",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:listener/app/nginx-alb-sonia/34a47fae58af5aaf/fbb8a713653a5475",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:loadbalancer/app/nginx-alb-sonia/34a47fae58af5aaf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx_alb-sonia",
            "aws_lb_target_group.nginx_tg-sonia",
            "data.aws_security_group.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg-sonia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:targetgroup/nginx-alb-dev-sonia-tg/f01c021f12a2e548",
            "arn_suffix": "targetgroup/nginx-alb-dev-sonia-tg/f01c021f12a2e548",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:921108067704:targetgroup/nginx-alb-dev-sonia-tg/f01c021f12a2e548",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:921108067704:loadbalancer/app/nginx-alb-sonia/34a47fae58af5aaf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-alb-dev-sonia-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08bffd360b72f38d5"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}